Tue Aug 22 13:57:36 2000  Christopher Faylor <cgf@cygnus.com>

	* path.cc (symlink_info::check): Clear error on each iteration of
	extension check.

Tue Aug 22 11:23:59 2000  Christopher Faylor <cgf@cygnus.com>

	* Makefile.in: Don't include '.d' file if there are none generated yet.

Tue Aug 22 11:08:11 2000  Christopher Faylor <cgf@cygnus.com>

	* include/sys/cygwin.h: Declare some thread classes.
	* include/mntent.h: Avoid declaring functions.

Tue Aug 22 01:08:01 2000  Christopher Faylor <cgf@cygnus.com>

	* winsup.h: Eliminate inclusion of most of the cygwin .h files.  Use .h
	files only in sources which require them.
	* Makefile.in: Generate dependencies with -MD option.

Mon Aug 21 23:49:05 2000  Christopher Faylor <cgf@cygnus.com>

	* cygerrno.h: New file.  Use this throughout whenever errno
	manipulation is required.
	* errno.cc: Use DWORD to hold Windows errors.
	(geterrno_from_win_error): New function.
	(seterrno_from_win_error): Use geterrno_from_win_error to convert
	supplied windows error (suggested by Corinna Vinschen).
	* path.cc (symlink_info): Add error element.
	* path.cc (path_conv::check): Remove errno setting.  Use new
	symlink_info errno element to set path_conv error, where appropriate.
	(symlink_info::check): Set error element rather than attempting to
	manipulate errno.  Add more checks for trailing / and /..  even though
	they are currently useless.  Avoid setting EINVAL.

Mon Aug 21 23:49:05 2000  Corinna Vinschen <corinna@vinschen.de>

	* path.cc (normalize_posix_path): Correct check for trailing /.

2000-08-21  DJ Delorie  <dj@redhat.com>

	* include/cygwin/cygwin_dll.h (DECLARE_CYGWIN_DLL): hinstance,
	not handle.

Fri Aug 18 11:11:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* dtable.cc (dtable::dup2): Extend fdtab if newfd is out of current
	allocated bounds.

Sat Aug 12 01:47:28 2000  Christopher Faylor <cgf@cygnus.com>

	* mkvers.sh: Properly trap exit removal of temp file.  Remove debugging
	statement.
